Updating All models according to supabase
